Implement SortMergeAsofJoin